--- a/IncidentTableView/Base.lproj/Main.storyboard
+++ b/IncidentTableView/Base.lproj/Main.storyboard
@@ -493,7 +493,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Gt-84-xw3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="Bgy-oB-e7w" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4868.115942028986" y="84.782608695652186"/>
+            <point key="canvasLocation" x="4868" y="80"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="jzw-L8-QJs">
@@ -534,7 +534,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="z6o-bC-XXJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="byj-Zy-hVB" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="5578.2608695652179" y="84.782608695652186"/>
+            <point key="canvasLocation" x="5578" y="80"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="5Ja-g7-Yeq">
@@ -629,10 +629,10 @@
                         <viewLayoutGuide key="safeArea" id="MGd-p6-RdK"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="uDT-Ce-qg0" firstAttribute="leading" secondItem="MGd-p6-RdK" secondAttribute="leading" constant="15" id="2nI-KD-k3m"/>
-                            <constraint firstItem="MGd-p6-RdK" firstAttribute="trailing" secondItem="uDT-Ce-qg0" secondAttribute="trailing" constant="15" id="Bnq-FQ-MGg"/>
-                            <constraint firstItem="uDT-Ce-qg0" firstAttribute="top" secondItem="MGd-p6-RdK" secondAttribute="top" constant="15" id="J0Z-qf-r8x"/>
-                            <constraint firstItem="MGd-p6-RdK" firstAttribute="bottom" secondItem="uDT-Ce-qg0" secondAttribute="bottom" constant="15" id="d9q-ya-DCg"/>
+                            <constraint firstItem="MGd-p6-RdK" firstAttribute="trailing" secondItem="uDT-Ce-qg0" secondAttribute="trailing" constant="15" id="cot-wE-lWo"/>
+                            <constraint firstItem="uDT-Ce-qg0" firstAttribute="leading" secondItem="MGd-p6-RdK" secondAttribute="leading" constant="15" id="swf-56-ZSP"/>
+                            <constraint firstItem="MGd-p6-RdK" firstAttribute="bottom" secondItem="uDT-Ce-qg0" secondAttribute="bottom" constant="15" id="wLu-0r-Mzx"/>
+                            <constraint firstItem="uDT-Ce-qg0" firstAttribute="top" secondItem="MGd-p6-RdK" secondAttribute="top" constant="15" id="xZQ-37-0v5"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -685,6 +685,15 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pse-gI-B33">
+                                <rect key="frame" x="98" y="583" width="218" height="102"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.73393648860000005" green="0.1505818367" blue="0.12150562550000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="Submitt">
+                                    <color key="titleColor" red="0.82845205070000005" green="0.85768133400000002" blue="0.91765636210000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </state>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="teX-WD-Y0r"/>
                         <color key="backgroundColor" red="0.20035266879999999" green="0.21138140559999999" blue="0.23137566449999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -700,6 +709,7 @@
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="zvT-ld-hnx" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="TVD-3w-sW2">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
